--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-5c7ef5163ae3>, line 47)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-5c7ef5163ae3>\"\u001b[0;36m, line \u001b[0;32m47\u001b[0m\n\u001b[0;31m    dic_stats['glob_name']=len(set_name)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def chunks(l, n):\n",
+    "    \"\"\"Yield successive n-sized chunks from l.\"\"\"\n",
+    "    for i in range(0, len(l), n):\n",
+    "        yield l[i:i + n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "count_header=0\n",
     "with open(argscsv+'rest.csv', 'w') as f:\n",
@@ -140,11 +143,43 @@
     "            nb_words = len(total_words)\n",
     "            dic_stats['glob_word']= nb_words\n",
     "            first_ten = etree.Element(\"first\")\n",
-    "            for word in total_words[0:int(((10*nb_words)/100))]:\n",
+    "            second_ten = etree.Element(\"second\")\n",
+    "            third_ten = etree.Element(\"third\")\n",
+    "            fourth_ten = etree.Element(\"fourth\")\n",
+    "            fifth_ten = etree.Element(\"fifth\")\n",
+    "            sixth_ten = etree.Element(\"sixth\")\n",
+    "            seventh_ten = etree.Element(\"seventh\")\n",
+    "            eigth_ten = etree.Element(\"eigth\")\n",
+    "            ninth_ten = etree.Element(\"ninth\")\n",
+    "            last_ten = etree.Element(\"tenth\")\n",
+    "            \n",
+    "            percents=list(chunks(total_words,round(((10*nb_words)/100))))\n",
+    "            \n",
+    "            if len(percents)>10:\n",
+    "                percents[9].extend(percents[10])\n",
+    "                percents.pop(10)\n",
+    "            \n",
+    "            for word in percents[0]:\n",
     "                first_ten.append(deepcopy(word))\n",
-    "            last_ten = etree.Element(\"last\")\n",
-    "            for word in total_words[nb_words-int(((10*nb_words)/100)):nb_words]:\n",
+    "            for word in percents[1]:\n",
+    "                second_ten.append(deepcopy(word))\n",
+    "            for word in percents[2]:\n",
+    "                third_ten.append(deepcopy(word))\n",
+    "            for word in percents[3]:\n",
+    "                fourth_ten.append(deepcopy(word))\n",
+    "            for word in percents[4]:\n",
+    "                fifth_ten.append(deepcopy(word))\n",
+    "            for word in percents[5]:\n",
+    "                sixth_ten.append(deepcopy(word))\n",
+    "            for word in percents[6]:\n",
+    "                seventh_ten.append(deepcopy(word))\n",
+    "            for word in percents[7]:\n",
+    "                eigth_ten.append(deepcopy(word))\n",
+    "            for word in percents[8]:\n",
+    "                ninth_ten.append(deepcopy(word))\n",
+    "            for word in percents[9]:\n",
     "                last_ten.append(deepcopy(word))\n",
+    "           \n",
     "            \n",
     "            dic_stats['glob_book']=len(tree.findall(\".//div[@type='book']\"))\n",
     "            dic_stats['glob_part']=len(tree.findall(\".//div[@type='part']\"))\n",
@@ -166,6 +201,7 @@
     "            dic_stats['glob_nous']=len(tree.findall(\".//word[@form='nous']\"))\n",
     "            dic_stats['glob_etat']=len(tree.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['glob_voc']=len(set(tree.xpath(\".//word/@lemma\")))\n",
+    "            \n",
     "            dic_stats['first_word']=len(first_chap.findall(\".//word\"))\n",
     "            dic_stats['first_paragraph']=len(first_chap.findall(\".//p\"))\n",
     "            dic_stats['first_sentence']=len(first_chap.findall(\".//word[@postag='PUNsent']\"))\n",
@@ -184,6 +220,7 @@
     "            dic_stats['first_nous']=len(first_chap.findall(\".//word[@form='nous']\"))\n",
     "            dic_stats['first_etat']=len(first_chap.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['first_voc']=len(set(first_chap.xpath(\".//word/@lemma\")))\n",
+    "            \n",
     "            dic_stats['first_ten_words']=len(first_ten.findall(\".//word\"))\n",
     "            dic_stats['first_ten_sentence']=len(first_ten.findall(\".//word[@postag='PUNsent']\"))\n",
     "            dic_stats['first_ten_av_word_per_sent']= average_words_sent(first_ten)\n",
@@ -201,6 +238,43 @@
     "            dic_stats['first_ten_nous']=len(first_ten.findall(\".//word[@form='nous']\"))\n",
     "            dic_stats['first_ten_etat']=len(first_ten.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['first_ten_voc']=len(set(first_ten.xpath(\".//word/@lemma\")))\n",
+    "            \n",
+    "            dic_stats['second_ten_word']=len(second_ten.findall(\".//word\"))\n",
+    "            dic_stats['second_ten_sentence']=len(second_ten.findall(\".//word[@postag='PUNsent']\"))\n",
+    "            dic_stats['second_ten_av_word_per_sent']= average_words_sent(second_ten)\n",
+    "            dic_stats['second_ten_name']=len(set(second_ten.xpath(\".//word[starts-with(@postag, 'NAME')]/@lemma\")))\n",
+    "            dic_stats['second_ten_verb']=len(second_ten.xpath(\".//word[starts-with(@postag,'VERB')]\"))\n",
+    "            dic_stats['second_ten_adverb']=len(second_ten.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
+    "            dic_stats['second_ten_adj']=len(second_ten.xpath(\".//word[starts-with(@postag, 'ADJ')]\"))\n",
+    "            dic_stats['second_ten_coord']=len(second_ten.findall(\".//word[@postag='CONJcoord']\"))\n",
+    "            dic_stats['second_ten_sub']=len(second_ten.findall(\".//word[@postag='CONJsubord']\"))\n",
+    "            dic_stats['second_ten_il']=len(second_ten.findall(\".//word[@form='il']\"))\n",
+    "            dic_stats['second_ten_ils']=len(second_ten.findall(\".//word[@form='ils']\"))\n",
+    "            dic_stats['second_ten_elle']=len(second_ten.findall(\".//word[@form='elle']\"))\n",
+    "            dic_stats['second_ten_elles']=len(second_ten.findall(\".//word[@form='elles']\"))\n",
+    "            dic_stats['second_ten_je']=len(second_ten.findall(\".//word[@form='je']\"))\n",
+    "            dic_stats['second_ten_nous']=len(second_ten.findall(\".//word[@form='nous']\"))\n",
+    "            dic_stats['second_ten_etat']=len(second_ten.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
+    "            dic_stats['second_ten_voc']=len(set(second_ten.xpath(\".//word/@lemma\")))\n",
+    "            \n",
+    "            dic_stats['last_ten_word']=len(last_ten.findall(\".//word\"))\n",
+    "            dic_stats['last_ten_sentence']=len(last_ten.findall(\".//word[@postag='PUNsent']\"))\n",
+    "            dic_stats['last_ten_av_word_per_sent']= average_words_sent(last_ten)\n",
+    "            dic_stats['last_ten_name']=len(set(last_ten.xpath(\".//word[starts-with(@postag, 'NAME')]/@lemma\")))\n",
+    "            dic_stats['last_ten_verb']=len(last_ten.xpath(\".//word[starts-with(@postag,'VERB')]\"))\n",
+    "            dic_stats['last_ten_adverb']=len(last_ten.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
+    "            dic_stats['last_ten_adj']=len(last_ten.xpath(\".//word[starts-with(@postag, 'ADJ')]\"))\n",
+    "            dic_stats['last_ten_coord']=len(last_ten.findall(\".//word[@postag='CONJcoord']\"))\n",
+    "            dic_stats['last_ten_sub']=len(last_ten.findall(\".//word[@postag='CONJsubord']\"))\n",
+    "            dic_stats['last_ten_il']=len(last_ten.findall(\".//word[@form='il']\"))\n",
+    "            dic_stats['last_ten_ils']=len(last_ten.findall(\".//word[@form='ils']\"))\n",
+    "            dic_stats['last_ten_elle']=len(last_ten.findall(\".//word[@form='elle']\"))\n",
+    "            dic_stats['last_ten_elles']=len(last_ten.findall(\".//word[@form='elles']\"))\n",
+    "            dic_stats['last_ten_je']=len(last_ten.findall(\".//word[@form='je']\"))\n",
+    "            dic_stats['last_ten_nous']=len(last_ten.findall(\".//word[@form='nous']\"))\n",
+    "            dic_stats['last_ten_etat']=len(last_ten.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
+    "            dic_stats['last_ten_voc']=len(set(last_ten.xpath(\".//word/@lemma\")))\n",
+    "            \n",
     "            dic_stats['mid_word']=len(middle_chap.findall(\".//word\"))\n",
     "            dic_stats['mid_paragraph']=len(middle_chap.findall(\".//p\"))\n",
     "            dic_stats['mid_sentence']=len(middle_chap.findall(\".//word[@postag='PUNsent']\"))\n",
@@ -219,6 +293,7 @@
     "            dic_stats['mid_nous']=len(middle_chap.findall(\".//word[@form='nous']\"))\n",
     "            dic_stats['mid_etat']=len(middle_chap.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['mid_voc']=len(set(middle_chap.xpath(\".//word/@lemma\")))\n",
+    "            \n",
     "            dic_stats['last_word']=len(last_chap.findall(\".//word\"))\n",
     "            dic_stats['last_paragraph']=len(last_chap.findall(\".//p\"))\n",
     "            dic_stats['last_sentence']=len(last_chap.findall(\".//word[@postag='PUNsent']\"))\n",
@@ -237,23 +312,7 @@
     "            dic_stats['last_nous']=len(last_chap.findall(\".//word[@form='nous']\"))\n",
     "            dic_stats['last_etat']=len(last_chap.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
     "            dic_stats['last_voc']=len(set(last_chap.xpath(\".//word/@lemma\")))\n",
-    "            dic_stats['last_ten_word']=len(last_ten.findall(\".//word\"))\n",
-    "            dic_stats['last_ten_sentence']=len(last_ten.findall(\".//word[@postag='PUNsent']\"))\n",
-    "            dic_stats['last_ten_av_word_per_sent']= average_words_sent(last_ten)\n",
-    "            dic_stats['last_ten_name']=len(set(last_ten.xpath(\".//word[starts-with(@postag, 'NAME')]/@lemma\")))\n",
-    "            dic_stats['last_ten_verb']=len(last_ten.xpath(\".//word[starts-with(@postag,'VERB')]\"))\n",
-    "            dic_stats['last_ten_adverb']=len(last_ten.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
-    "            dic_stats['last_ten_adj']=len(last_ten.xpath(\".//word[starts-with(@postag, 'ADJ')]\"))\n",
-    "            dic_stats['last_ten_coord']=len(last_ten.findall(\".//word[@postag='CONJcoord']\"))\n",
-    "            dic_stats['last_ten_sub']=len(last_ten.findall(\".//word[@postag='CONJsubord']\"))\n",
-    "            dic_stats['last_ten_il']=len(last_ten.findall(\".//word[@form='il']\"))\n",
-    "            dic_stats['last_ten_ils']=len(last_ten.findall(\".//word[@form='ils']\"))\n",
-    "            dic_stats['last_ten_elle']=len(last_ten.findall(\".//word[@form='elle']\"))\n",
-    "            dic_stats['last_ten_elles']=len(last_ten.findall(\".//word[@form='elles']\"))\n",
-    "            dic_stats['last_ten_je']=len(last_ten.findall(\".//word[@form='je']\"))\n",
-    "            dic_stats['last_ten_nous']=len(last_ten.findall(\".//word[@form='nous']\"))\n",
-    "            dic_stats['last_ten_etat']=len(last_ten.xpath(\".//word[@lemma='être' or @lemma='sembler' or @lemma='devenir' or @lemma='demeurer' or @lemma='rester' ]\"))\n",
-    "            dic_stats['last_ten_voc']=len(set(last_ten.xpath(\".//word/@lemma\")))\n",
+    "            \n",
     "            titles_book=0\n",
     "            num_book=0\n",
     "            for element in tree.findall(\".//div[@type='book'][@title]\"):\n",
