--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -67,6 +67,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_words_chap (tree):\n",
+    "    average = 0\n",
+    "    words=list()\n",
+    "    if tree.findall(\".//div[@type='chapter']\"):\n",
+    "        for chapter in tree.findall(\".//div[@type='chapter']\"):\n",
+    "            numWords=len(chapter.findall(\".//word\"))\n",
+    "            words.append(numWords)\n",
+    "    \n",
+    "    average=sum(words)/len(words)\n",
+    "    return average"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -195,6 +213,7 @@
     "            dic_stats['glob_paragraph']=len(tree.findall(\".//p\"))\n",
     "            dic_stats['glob_sentence']=len(tree.findall(\".//word[@postag='PUNsent']\"))\n",
     "            dic_stats['glob_av_word_per_sent']= average_words_sent(tree)\n",
+    "            dic_stats['glob_av_word_per_chap']= average_words_chap(tree)\n",
     "            dic_stats['glob_name']=len(set(tree.xpath(\".//word[starts-with(@postag, 'NAME')]/@lemma\")))\n",
     "            dic_stats['glob_verb']=len(tree.xpath(\".//word[starts-with(@postag,'VERB')]\"))\n",
     "            dic_stats['glob_adverb']=len(tree.xpath(\".//word[starts-with(@postag, 'ADV')]\"))\n",
