latest glob.csv june 21st

--- a/validation.ipynb
+++ b/validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "500\n",
-      "1000\n",
-      "1500\n",
-      "2000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "index=0\n",
     "for filename_xml in files_list:\n",
@@ -52,6 +41,8 @@
     "            if len(doc.findall(\".//p\"))==0:\n",
     "                print(filename_xml)\n",
     "                print(\"Pas de paragraphe\")\n",
+    "            \n",
+    "            \n",
     "\n",
     "    # check for file IO error\n",
     "        except IOError:\n",
@@ -60,22 +51,15 @@
     "\n",
     "    # check for XML syntax errors\n",
     "        except etree.XMLSyntaxError as err:\n",
-    "            print(filename_xml)\n",
+    "            print(err)\n",
     "            print('XML Syntax Error')\n",
-    "        except:\n",
+    "        \n",
+    "        except :\n",
     "            print(filename_xml)\n",
-    "            print('Unknown error.')\n",
+    "            print('Unknown')\n",
+    "            \n",
     "    index+=1        \n",
-    "    if index == 500:\n",
-    "        print('500')\n",
-    "    elif index == 1000:\n",
-    "        print('1000')\n",
-    "    elif index == 1500:\n",
-    "        print('1500')\n",
-    "    elif index == 2000:\n",
-    "        print('2000')\n",
-    "    elif index == 2500:\n",
-    "        print('2500')"
+    "    "
    ]
   },
   {
