--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -166,7 +166,7 @@
     "            dic_stats['title']=re.sub(u'\\n','',tree.find(\".//title\").text).replace(\"     \",\"\")\n",
     "            dic_stats['author']=tree.find(\".//author\").attrib['name']\n",
     "            dic_stats['date']=tree.find(\".//date\").attrib['when']\n",
-    "            #dic_stats['genre']=tree.find(\".//term\").text\n",
+    "            dic_stats['genre']=tree.find(\".//term\").text\n",
     "            dic_stats['canon_degree']=\"empty\"\n",
     "            total_words = tree.findall(\".//word\")\n",
     "            nb_words = len(total_words)\n",
@@ -555,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
