--- a/global_table.ipynb
+++ b/global_table.ipynb
@@ -166,6 +166,8 @@
     "            dic_stats['title']=re.sub(u'\\n','',tree.find(\".//title\").text).replace(\"     \",\"\")\n",
     "            dic_stats['author']=tree.find(\".//author\").attrib['name']\n",
     "            dic_stats['date']=tree.find(\".//date\").attrib['when']\n",
+    "            dic_stats['editor_name']=tree.find(\".//editor\").attrib['name']\n",
+    "            dic_stats['editor_place']=tree.find(\".//editor\").attrib['where']\n",
     "            dic_stats['genre']=tree.find(\".//term\").text\n",
     "            dic_stats['canon_degree']=\"empty\"\n",
     "            total_words = tree.findall(\".//word\")\n",
